# qa_memorize_mcp

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  gemini-extension.json  marketplace.json  memorize-mcp.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: main.yml  npm-publish.yml
commands/: recall.md
docs/: README.zh-CN.md  opencode-agent-setup.md
embedding_model/: export_model.py  merge_onnx.py
gemini-extension/: settings.json
hooks/: claude-code-settings.json  gemini-cli-settings.json  hooks.json  memorize-hook.mjs  opencode-config.json  opencode-plugin.mjs
npm/qa-memorize-mcp/: .npmrc  package.json
npm/qa-memorize-mcp-darwin-arm64/: package.json
npm/qa-memorize-mcp-darwin-x64/: package.json
npm/qa-memorize-mcp-linux-x64/: package.json
npm/qa-memorize-mcp-win-x64/: package.json
npm/qa-memorize-mcp/scripts/: postinstall.mjs
scripts/: bump-version.js  compress-model.mjs  memorize_hook.py  pack-npm.py  package.py  publish.py
src/: embedding.rs  hook.rs  lib.rs  main.rs  models.rs  persistence.rs  server.rs  storage.rs  transport.rs
tests/: integration.rs  test_hooks.py  test_npm_package.py
