[package]
name = "memorize_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "transport-streamable-http-server"] }

lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"

ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
ndarray = "0.16"
tokenizers = "0.21"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

axum = "0.8"
tokio-util = "0.7"

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
rmcp = { version = "0.15", features = ["client"] }
